# scout

./: .dockerignore  .gitignore  Dockerfile
.dvc/: config
src/scout_perception/: CMakeLists.txt  package.xml
src/scout_perception/src/: detection_node.cpp
